# embedded-cpp-fundementals

./: .gitignore  CMakeLists.txt  README.md
include/: fixed_queue.hpp  heap_buffer.hpp  raii_guard.hpp  resource_buffer.hpp
src/: main.cpp
tests/: test_fixed_queue.cpp  test_heap_buffer.cpp  test_raii_guard.cpp  test_resource_buffer.cpp
